SERVER-127302: Dependency graph arrayness tracking incorrect for $lookup with sorted INLJ indexes (#56380)

GitOrigin-RevId: 6393968c01ec2bbaf470d5b10da0a8dae655ffb7